--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/scss/bootstrap';
+
+.header {
+  width: 100%;
+  background: lightblue;
+  height: 40px;
+}
+
+.menulink {
+  padding: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+}
+
+.error {
+  color: red;
+}
+
+.success {
+  color: green;
+}
